--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,6 +1,7 @@
 <div id="<%= dom_id article %>">
   <div class="card text-white w-50 p-3"
-  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(' <%=article.photo_url%>')"
+  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+  url('<%= article.photo.attached? ? (cl_image_path article.photo.key, height: 300, crop: :fill) : nil %>')"
   <p>
     <strong>Title:</strong>
     <%= article.title %>
